# recipe-scraper

./: .gitignore  main.py  models.py  pyproject.toml  robots.py  scraper.py  sitemap.py  util.py
src/chorba/cmd/: analyze_highlighting.py  sample_recipes.py  server.py
src/chorba/lib/: robot.py  scraper.py  sitemap.py
src/chorba/lib/markup/: _processors.py  _schema_org.py  scraper.py
src/chorba/web/: models.py  routes.py
tests/: test_analyze_highlighting_cmd.py  test_sample_recipes_cmd.py  test_schema_org_ingredients.py
