[project]
name = "recipe-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "brotli>=1.1.0",
    "curl-cffi>=0.14.0",
    "httpx>=0.28.0",
    "ingredient-parser-nlp>=1.3.1",
    "lxml>=6.0.0",
    "parsel>=1.9.1",
    "recipe-scrapers>=15.3.3",
    "robotspy>=0.12.0",
    "scrapy>=2.12.0",
    "zstandard>=0.23.0",
]
