[project]
name = "chorba"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.14.0",
    "extruct>=0.18.0",
    "fastapi[standard]>=0.128.0",
    "parsel>=1.9.1",
    "robotspy>=0.12.0",
    "scrapy>=2.12.0",
]

[tool.uv]
package = true

[project.scripts]
server = "chorba.cmd.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

