[project]
name = "chorba"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.14.0",
    "extruct>=0.18.0",
    "fastapi[standard]>=0.128.0",
    "ingredient-parser-nlp>=2.6.0",
    "parsel>=1.9.1",
    "robotspy>=0.12.0",
    "scrapy>=2.12.0",
]

[tool.uv]
package = true

[project.scripts]
server = "chorba.cmd.server:main"
sample-recipes = "chorba.cmd.sample_recipes:main"
analyze-highlighting = "chorba.cmd.analyze_highlighting:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.setuptools.packages.find]
where = ["src"]
